# awos-recruitment

./: .gitignore  .mcp.json  Makefile  README.md  justfile
.claude/agents/: posthog-telemetry-analyst.md  python-expert.md  qa-tester.md  typescript-expert.md
.github/workflows/: deploy.yml  image-scan.yml  publish-cli.yml  terraform-lint.yml  validate.yml
cli/: package-lock.json  package.json
cli/src/: cli.ts  index.ts
context/product/: architecture.md  product-definition-lite.md  product-definition.md  roadmap.md
docs/: CONTRIBUTING.md  DEVELOPMENT.md  PHILOSOPHY.md
infra/: README.md  acm.tf  alb.tf  datasources.tf  dns.tf  ecs.tf  locals.tf  logs.tf  outputs.tf  ssm.tf
infra/831917488702/: README.md  acm.tf  alb.tf  datasources.tf  dns.tf  ecr.tf  ecs.tf  github_oidc.tf  locals.tf  network.tf  outputs.tf  providers.tf
infra/941000539201/: README.md  datasources.tf  dns.tf  ecs.tf  github_oidc.tf  locals.tf  outputs.tf  providers.tf  security_groups.tf  ssm.tf  terraform.tfvars.example  variables.tf  vpc.tf
registry/agents/: agentic-underwriting-engineer.md  documentation-specialist.md  mobile-specialist.md  prorag-specialist.md  security-specialist.md  test-agent.md  testing-expert.md
registry/mcp/: atlassian.yaml  aws-api-mcp-server.yaml  aws-docs.yaml  aws-knowledge-mcp-server.yaml  aws-tf.yaml  context7.yaml  excalidraw.yaml  github-mcp-server.yaml  gitlab.yaml  google-drive.yaml  google-workspace.yaml  playwright.yaml  shadcn.yaml  slack.yaml  terraform-mcp-server.yaml
server/: .env.example  Dockerfile  pyproject.toml
server/src/awos_recruitment_mcp/: config.py  registry.py  search_index.py  server.py  telemetry.py
server/src/awos_recruitment_mcp/models/: __init__.py  agent_metadata.py  capability.py  mcp_definition.py  skill_metadata.py
server/src/awos_recruitment_mcp/tools/: search.py
server/src/awos_recruitment_mcp/validate/: __init__.py  __main__.py
server/tests/: test_bundle.py  test_bundle_telemetry.py  test_docs_that_work_gate_hook.py  test_registry.py  test_search_index.py  test_search_tool.py  test_skill_copy_sync.py  test_telemetry.py  test_validate.py
tests/: test_search_tool.py
(+251 files in other folders)
