[project]
name = "awos-recruitment-mcp"
version = "0.1.0"
description = "MCP server providing AI coding assistants with a discovery engine for skills, agents, and tools."
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "fastmcp>=3.2.0",
    "posthog>=7.0.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Cooldown window: ignore package versions uploaded in the last 7 days.
# Mitigates zero-day supply-chain attacks (a malicious release has to survive
# 7 days of public scrutiny before we'll pick it up).
exclude-newer = "7 days"

# Per-package cooldown exemption. starlette 1.3.1 (published 2026-06-12) is the
# only release that patches HIGH CVE-2026-54283 (form-limit DoS), but it landed
# 1 day inside the 7-day window. The known, published CVE outweighs the marginal
# supply-chain risk of a 6-day-old release from a reputable maintainer (Encode),
# so we exempt starlette with a fixed cutoff that admits 1.3.1.
exclude-newer-package = { starlette = "2026-06-13" }

[tool.hatch.build.targets.wheel]
packages = ["src/awos_recruitment_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
